--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -13,10 +13,11 @@
 \usepackage{titlesec}
 \usepackage{graphicx}
 \newcommand{\ud}[1]{\mathrm{d}#1}
+\newcommand{\e}{\mathrm e}
 \pagestyle{empty}
 \begin{document}
-\setlength\abovedisplayskip{2pt}
-\setlength\belowdisplayskip{2pt}
+\setlength\abovedisplayskip{3pt}
+\setlength\belowdisplayskip{3pt}
 \begin{titlepage}
 
 	\begin{center}
@@ -34,7 +35,7 @@
 \setcounter{chapter}{1}
 \chapter{数列极限}
 \section{数列极限的基本概念}
-\subsection{思考题}
+\subsection{思考题 pp.13.}
 \kaishu
 \begin{enumerate}
 	\item 数列收敛有很多等价定义. 例如:
@@ -60,10 +61,14 @@
 	\item 判断: 若~$\{a_n\}$~收敛, 则有~$\lim\limits_{n\to\infty} (a_{n+1}-a_n)=0$~和~$\lim\limits_{n\to\infty} a_{n+1}/a_n=1$.
 	      \begin{proof}[\bf 答]
 		      $\lim\limits_{n\to\infty} (a_{n+1}-a_n)=0$. 对于任意给定的~$\varepsilon>0$, 存在~$N>0$, 当~$n>N$时有~$|a_n-a|<\varepsilon/2$, 从而~$|a_{n+1}-a|<\varepsilon/2$, 于是对于~$n>N$,
-		      \[|a_{n+1}-a_n|\leqslant|a_{n+1}-a|+|a_n-a|<\varepsilon/2+\varepsilon/2=\varepsilon.\]
+		      \[
+			      |a_{n+1}-a_n|\leqslant|a_{n+1}-a|+|a_n-a|<\varepsilon/2+\varepsilon/2=\varepsilon.
+		      \]
 
 		      $\lim\limits_{n\to\infty} a_{n+1}/a_n=1$. 举一反例~$\{(-1)^n 1/n\}$, 显然~$\lim\limits_{n\to\infty} (-1)^n1/n=0$, 但
-		      \[\lim\limits_{n\to\infty}\dfrac{(-1)^{n+1} 1/(n+1)}{(-1)^n 1/n}=\lim\limits_{n\to\infty} -1\cdot\dfrac{n}{n+1}=-1.\]\qedhere
+		      \[
+			      \lim\limits_{n\to\infty}\dfrac{(-1)^{n+1} 1/(n+1)}{(-1)^n 1/n}=\lim\limits_{n\to\infty} -1\cdot\dfrac{n}{n+1}=-1.\qedhere
+		      \]
 	      \end{proof}
 	\item 设收敛数列~$\{a_n\}$~的每一项都是整数, 问: 该数列有什么特殊性质?
 	      \begin{proof}[\bf 答]
@@ -80,9 +85,13 @@
 	\item 问: 如果数列~$\{a_n\}$~收敛于~$a$, 那么绝对值~$|a_n-a|$~是否随着~$n$~的增加而单调减少趋于~$0$?
 	      \begin{proof}[\bf 答]
 		      不一定. 如取~$\{a_n\}$~为形如
-		      \[1,1/2,1/3,1/6,1/4,1/8,1/12,\cdots,1/n,1/2n,\cdots,1/n(n-1),1/(n+1),\cdots\]
+		      \[
+			      1,1/2,1/3,1/6,1/4,1/8,1/12,\cdots,1/n,1/2n,\cdots,1/n(n-1),1/(n+1),\cdots
+		      \]
 		      的数列, 由于~$1/n$~和~$1/(n+1)$~之间的所有项都严格小于~$1/(n+1)$, 于是~$\{a_n\}$~的上控数列\footnote{请结合数列的上下极限部分.}~$\{\overline{a_n}\}$~为~$1,1/2,1/3,1/4,1/4,\cdots$, 其中~$1/n$~连续出现了~$n-3$~次($n\geqslant3$), 显然~$\lim\limits_{n\to\infty}\overline{a_n}=0$. 而全为正项的数列~$\{a_n\}$~有一个子列~$\{1/n\}$~收敛于~$0$, 故
-		      \[\varliminf\limits_{n\to\infty} a_n=\varlimsup\limits_{n\to\infty} a_n=0.\]
+		      \[
+			      \varliminf\limits_{n\to\infty} a_n=\varlimsup\limits_{n\to\infty} a_n=0.
+		      \]
 		      即~$\lim\limits_{n\to\inf}a_n=0$, 但显然~$\{|a_n|\}$~并不单调.\qedhere
 	      \end{proof}
 	\item 判断: 非负数列的极限是非负数, 正数列的极限是整数.
@@ -93,7 +102,7 @@
 	      \end{proof}
 \end{enumerate}
 
-\subsection{练习题}
+\subsection{练习题 pp.17.}
 \begin{enumerate}
 	\item 按极限定义证明:
 	      \begin{tabenum}[(1)]
@@ -108,13 +117,21 @@
 			      \item 取~$N=[\sqrt{12/\varepsilon+4}]+1$, 当~$n>N$~时, $|\dfrac{3n^2}{n^2-4}-3|=\dfrac{12}{n^2-4}<\varepsilon;$
 			      \item 取~$N=[1/\varepsilon]$, 当~$n>N$~时, $|\dfrac{\sin{n}}{n}\leqslant\dfrac{1}{n}<\varepsilon;$
 			      \item 由于~$(1+n)^{\frac{1}{n}}>1, \forall n\in\mathbf{N}_{+}$, 故令~$y_n=(1+n)^{\frac{1}{n}}-1>0$, 有$n+1=(1+y_n)^n\geqslant \dfrac{n(n-1)}{2}y_n^2$, 即
-			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}.\]
+			            \[
+				            \sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}.
+			            \]
 			            又由~$\lim\limits_{n\to\infty}\dfrac{2(n+1)}{n(n-1)}$, 故存在~$N\in\mathbf{N}_{+}$, 使当~$n>N$~时有~$\dfrac{2(n+1)}{n(n-1)}<\varepsilon<1$, 故当~$n>N$~时有
-			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}<\sqrt{\varepsilon}<\varepsilon;\]
+			            \[
+				            \sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}<\sqrt{\varepsilon}<\varepsilon;
+			            \]
 			      \item 若~$0<a\leqslant 1$, 显然取~$N=[\varepsilon]+1$, 当~$n>N$~时
-			            \[\dfrac{a^n}{n!}\leqslant\dfrac{1}{n}<\varepsilon.\]
+			            \[
+				            \dfrac{a^n}{n!}\leqslant\dfrac{1}{n}<\varepsilon.
+			            \]
 			            若~$a>1$, 则存在~$k\in\mathbf{N}_{+}$~使得~$k<a<k+1$, 于是
-			            \[\dfrac{a^n}{n!}=\dfrac{a\cdot a\cdots a\cdot a\cdot a\cdots a\cdot a}{n\cdot(n-1)\cdots(k+1)k(k-1)\cdots2\cdot1}\leqslant\dfrac{a}{n}\dfrac{a\cdots a}{a\cdots a}\cdot\dfrac{a}{k}\dfrac{a}{k-1}\cdots\dfrac{a}{2}\dfrac{a}{1}.\]
+			            \[
+				            \dfrac{a^n}{n!}=\dfrac{a\cdot a\cdots a\cdot a\cdot a\cdots a\cdot a}{n\cdot(n-1)\cdots(k+1)k(k-1)\cdots2\cdot1}\leqslant\dfrac{a}{n}\dfrac{a\cdots a}{a\cdots a}\cdot\dfrac{a}{k}\dfrac{a}{k-1}\cdots\dfrac{a}{2}\dfrac{a}{1}.
+			            \]
 			            注意上式中最后一项是一常数, 可记为~$K$, 取~$N=[aK/\varepsilon]+1$, 当~$n>N$~时有~$\dfrac{a^n}{n!}<\varepsilon.$\qedhere
 		      \end{enumerate}
 	      \end{proof}
@@ -128,18 +145,22 @@
 	      \end{proof}
 	\item \footnote{关于原先的~$5$~题, 完全可以使用相应函数极限的定义加上~Heine~定理证明, 并且本质没有任何不同.} 设~$a>1$, 证明~$\lim\limits_{n\to\infty}\dfrac{\log_a{n}}{n}=0$. (可以利用已知的极限~$\lim\limits_{n\to\infty}\sqrt[n]{n}=1$.)
 	      \begin{proof}
-		      \[ \lim\limits_{n\to\infty}\dfrac{\log_a{n}}{n}=\lim\limits_{n\to\infty}\log_a{n^{1/n}}=\lim\limits_{n\to\infty}\log_a{1}=0.\]
+		      \[
+			      \lim\limits_{n\to\infty}\dfrac{\log_a{n}}{n}=\lim\limits_{n\to\infty}\log_a{n^{1/n}}=\lim\limits_{n\to\infty}\log_a{1}=0.
+		      \]
 		      其中第二个等号用到了~$\log_a{x}$~的连续性.\qedhere
 	      \end{proof}
 \end{enumerate}
 
 \section{收敛数列的基本性质}
-\subsection{思考题}
+\subsection{思考题 pp.18.}
 \begin{enumerate}
 	\item	设~$\{a_n\}$~收敛而~$\{b_n\}$~发散, 问: $\{a_n+b_n\}$~和~$\{a_nb_n\}$~的敛散性如何?
 	      \begin{proof}
 		      $\{a_n+b_n\}$~发散. 反证法. 假设~$\lim\limits_{n\to\infty} a_n=a, \lim\limits_{n\to\infty} (a_n+b_n)=A$, 则对于~$\forall\varepsilon>0$, $\exists N_1, N_2\in\mathbf{N}_{+}$, 当~$n>N_1$~时, $|(a_n+b_n)-A|<\varepsilon/2$; 当~$n>N_2$~时, $|a_n-a|<\varepsilon/2$. 令~$N=\max\{N_1,N_2\}$, 则当~$n>N$~时有
-		      \[|b_n-(A-a)|=|[(a_n+b_n)-A]-(a_n-a)|\leqslant|(a_n+b_n)-A|+|a_n-a|<\varepsilon/2+\varepsilon/2=\varepsilon.\]
+		      \[
+			      |b_n-(A-a)|=|[(a_n+b_n)-A]-(a_n-a)|\leqslant|(a_n+b_n)-A|+|a_n-a|<\varepsilon/2+\varepsilon/2=\varepsilon.
+		      \]
 		      即~$\lim\limits_{n\to\infty} b_n=A-a$, 与~$\{b_n\}$~发散矛盾.
 
 		      $\{a_nb_n\}$~可能发散也可能收敛. 如取~$a_n=1/n, b_n=n\sin{n}$, 则~$a_nb_n=\sin{n}$, $\{a_nb_n\}$~发散; 取~$a_n=1/n, b_n=(-1)^n$, 则~$a_nb_n=(-1)^n1/n$, $\{a_nb_n\}$~收敛.\qedhere
@@ -155,7 +176,9 @@
 		      $\{b_n\}$~不一定收敛. 取一反例, $a_n=n, b_n=n+1/2n, c_n=n+1/n, n\in\mathbf{H}_{+}$, 则~$\lim\limits_{n\to\infty} (c_n-a_n)=\lim\limits_{n\to\infty} 1/n=0$, 但显然~$\{b_n\}$~发散.\qedhere
 	      \end{proof}
 	\item 找出下列运算中的错误:
-	      \[\lim\limits_{n\to\infty} \left(\dfrac{1}{n+1}+\cdots+\dfrac{1}{2n}\right)=\lim\limits_{n\to\infty}\dfrac{1}{n+1}+\cdots+\lim\limits_{n\to\infty}\dfrac{1}{2n}=0.\]
+	      \[
+		      \lim\limits_{n\to\infty} \left(\dfrac{1}{n+1}+\cdots+\dfrac{1}{2n}\right)=\lim\limits_{n\to\infty}\dfrac{1}{n+1}+\cdots+\lim\limits_{n\to\infty}\dfrac{1}{2n}=0.
+	      \]
 	      \begin{proof}
 		      问题在于第二个等号, 极限的四则运算法则之对于有限次的加减乘除(除法要求分母的数列不为零)成立, 对于可列次的四则运算没有意义.\qedhere
 	      \end{proof}
@@ -173,7 +196,7 @@
 	      \end{proof}
 \end{enumerate}
 
-\subsection{练习题}
+\subsection{练习题 pp.25.}
 \begin{enumerate}
 	\item	证明: $\{a_n\}$~收敛的充分必要条件是~$\{a_{2k}\}$~和~$\{a_{2k-1}\}$~收敛于同一极限.
 	      \begin{proof}
@@ -229,9 +252,9 @@
 					            = & \dfrac{1}{4}-\dfrac{1}{2(n+1)(n+2)}\to\dfrac{1}{4} \ (n\to\infty)
 				            \end{aligned}$
 			      \item $\begin{aligned}[t]
-					            \sum\limits_{k=1}^{n}\dfrac{1}{k(k+1)\cdots(k+\nu)}= & \sum\limits_{k=1}^n\dfrac{1}{\nu}\left(\dfrac{1}{k(k+1)\cdots(k+\nu-1)}-\dfrac{1}{(k+1)(k+2)\cdots(k+\nu)}\right)                                    \\
-					            =                                                    & \dfrac{1}{\nu}\left(\dfrac{1}{1\cdot2\cdot\cdots\cdot\nu}-\dfrac{1}{(n+1)(n+2)\cdots(n+\nu)}\right)\to\dfrac{1}{\nu\cdot\nu!} \ (n\to\infty)\qedhere
-				            \end{aligned}$
+					            \sum\limits_{k=1}^{n}\dfrac{1}{k(k+1)\cdots(k+\nu)}= & \sum\limits_{k=1}^n\dfrac{1}{\nu}\left(\dfrac{1}{k(k+1)\cdots(k+\nu-1)}-\dfrac{1}{(k+1)(k+2)\cdots(k+\nu)}\right)                            \\
+					            =                                                    & \dfrac{1}{\nu}\left(\dfrac{1}{1\cdot2\cdot\cdots\cdot\nu}-\dfrac{1}{(n+1)(n+2)\cdots(n+\nu)}\right)\to\dfrac{1}{\nu\cdot\nu!} \ (n\to\infty)
+				            \end{aligned}$\qedhere
 		      \end{enumerate}
 	      \end{proof}
 	\item 设~$s_n=a+3a^2+\cdots+(2n-1)a^n$, $|a|<1$, 求~$\{a_m\}$~的极限.\\
@@ -244,9 +267,13 @@
 			      \end{split}
 		      \end{equation*}
 		      上面两式相减, 有
-		      \[	(1-a)S_n=a+2(a^2+a^3+\cdots+a^n)-(2n-1)a^{n+1}=\dfrac{a(1+a)}{1-a}-(2n-1)a^{n+1}-\dfrac{2a^{n+1}}{1-a}.\]
+		      \[
+			      (1-a)S_n=a+2(a^2+a^3+\cdots+a^n)-(2n-1)a^{n+1}=\dfrac{a(1+a)}{1-a}-(2n-1)a^{n+1}-\dfrac{2a^{n+1}}{1-a}.
+		      \]
 		      故
-		      \[S_n=\dfrac{a(1+a)}{(1-a)^2}-\dfrac{1}{1-a}\left((2n-1)a^{n+1}+\dfrac{2a^{n+1}}{1-a}\right)\to\dfrac{a(1+a)}{(1-a)^2}\ (n\to\infty).\]\qedhere
+		      \[
+			      S_n=\dfrac{a(1+a)}{(1-a)^2}-\dfrac{1}{1-a}\left((2n-1)a^{n+1}+\dfrac{2a^{n+1}}{1-a}\right)\to\dfrac{a(1+a)}{(1-a)^2}\ (n\to\infty).\qedhere
+		      \]
 	      \end{proof}
 	\item 设正数列~$\{x_n\}$~收敛, 极限大于~$0$, 证明: 这个数列有正下界, 但在数列中不一定有最小数.
 	      \begin{proof}
@@ -270,24 +297,26 @@
 	      \end{proof}
 	\item 证明: 数列~$\{\tan{n}\}$~发散.
 	      \begin{proof}
-		      \[
+		      \begin{equation*}
 			      \begin{split}
 				      |\tan(n+1)-\tan{n}|=&\left|\dfrac{\sin(n+1)}{\cos(n+1)}-\dfrac{\sin{n}}{\cos{n}}\right|\\
 				      =&\left|\dfrac{\sin(n+1)\cos{n}-\cos(n+1)\sin{n}}{\cos(n+1)\cos{n}}\right|\\
 				      =&\left|\dfrac{\sin{1}}{\cos(n+1)\cos{n}}\right|\\
 				      \geqslant&\sin{1},\ \forall n\in\mathbf{N}_{+}.
 			      \end{split}
-		      \]
+		      \end{equation*}
 		      这说明~$\exists\varepsilon_0=\sin{1}$, $\forall N\in\mathbf{N}_{+}$, $\exists n>N$~使得~$|\tan(n+1)-\tan{n}|\geqslant\sin{1}>0$. 由~Cauchy~收敛准则知, $\{\tan{n}\}$~发散.\qedhere
 	      \end{proof}
 	\item 设数列~$\{S_n\}$~的定义为
-	      \[S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.\]
+	      \[
+		      S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.
+	      \]
 	      证明: $\{S_n\}$~在以下两种情况均发散: (1)$p\leqslant 0$; (2)$0<p<1$.
 	      \begin{proof}
 		      当~$p\leqslant 0$~时, $S_{n+1}-S_n=\dfrac{1}{n^p}=\begin{cases}1, & p=0;\\ n^{-p}, & p<0.\end{cases}$ 由~Cauchy~收敛准则知~$\{S_n\}$~发散.\\
 
 		      当~$0<p<1$~时, 对于~$\forall n\in\mathbf{N}_{+}$, $\exists k\in\mathbf{N}_{+}$~使得~$2^k<n<2^{k+1}$, 故
-		      \[
+		      \begin{equation*}
 			      \begin{split}
 				      S_n\geqslant & S_{2^k}=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{2^{kp}}                                                                                         \\
 				      \geqslant        & 1+\dfrac{1}{2^p}+\left(\dfrac{1}{3^p}+\dfrac{1}{4^p}\right)\cdots+\left(\dfrac{1}{(2^{k-1}+1)^p}+\dfrac{1}{(2^{k-1}+2)^p}\cdots+\dfrac{1}{2^{kp}}\right) \\
@@ -295,14 +324,15 @@
 				      =                & 1+\dfrac{1}{2}(2^{1-p}+2^{2(1-p)}+\cdots+2^{k(1-p)})                                                                                                     \\
 				      =                & 1+\dfrac{2^{1-p}}{2}\dfrac{2^{k(1-p)}-1}{2^{1-p}-1}\to+\infty\ (n\to\infty)
 			      \end{split}
-		      \]
+		      \end{equation*}
 		      故~$\{S_n\}$~发散.\qedhere
 	      \end{proof}
 \end{enumerate}
 
 \section{单调数列}
+\subsection{练习题 pp.30.}
 \begin{enumerate}
-	\item 若~$\{x_n\}$~单调, 则~$\{|x_n\}$~至少从某项开始后单调. 又问: 反之如何?
+	\item 若~$\{x_n\}$~单调, 则~$\{|x_n|\}$~至少从某项开始后单调. 又问: 反之如何?
 	      \begin{proof}
 		      不妨设~$\{x_n\}$~单增.
 
@@ -331,17 +361,19 @@
 		      易知~$\forall n\in\mathbf{N}_{+}, a_n>0$, 且~$\dfrac{x_n}{x_{n-1}}=\dfrac{n+9}{2n-1}<1, \forall n\in\mathbf{N}_{+}, n>10$. $\{x_n\}$~从第~$11$~项起单调递减有下界, 故极限存在, 设为~$a$, 在递推式~$x_n=\dfrac{n+9}{2n-1}x_{n-1}$~两边令~$n\to\infty$, 有~$a=a/2$, 故~$a=0$~或~$1$. 同上题推理有~$\lim\limits_{n\to\infty} a_n=0$.\qedhere
 	      \end{proof}
 	\item 在例题~2.2.6~的基础上证明: 当~$p>1$~时数列~$\{S_n\}$~收敛, 其中
-	      \[S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.\]
+	      \[
+		      S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.
+	      \]
 	      \begin{proof}
 		      对于~$\forall n\in\mathbf{N}_{+}$, $\exists k\in\mathbf{N}_{+}$~使得~$2^{k-1}<n<2^{k}$, 故
-		      \[
+		      \begin{equation*}
 			      \begin{split}
 				      S_n\leqslant & S_{2^k-1}=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{(2^n-1)^p}                                                                                         \\
 				      \leqslant        & 1+\left(\dfrac{1}{2^p}+\dfrac{1}{2^p}\right)+\cdots+\left(\dfrac{1}{(2^{k-1})^p}+\dfrac{1}{(2^{k-1})^p}\cdots+\dfrac{1}{(2^{k-1})^p}\right) \\
 				      =                & 1+2^{1-p}+2^{2(1-p)}+\cdots+2^{(k-1)(1-p)}                                                                                                    \\
 				      =                & \dfrac{1-2^{k(1-p)}}{1-2^{1-p}}\leqslant \dfrac{1}{1-2^{1-p}}
 			      \end{split}
-		      \]
+		      \end{equation*}
 		      这表明~$\{S_n\}$~有界, 又显然~$\{S_n\}$~单调递增, 故由单调有界原理知~$\{S_n\}$~收敛.\qedhere
 	      \end{proof}
 	\item 设~$0<x_0<\dfrac{\pi}{2}, x_n=\sin{x_{n-1}}, n\in\mathbf{N}_{+}$, 证明: $\{x_n\}$~收敛, 并求其极限.
@@ -351,20 +383,24 @@
 	\item 设~$a_n=\left[\dfrac{(2n-1)!!}{(2n)!!}\right]^2, n\in\mathbf{N}_{+}$, 证明: $\{a_n\}$~收敛于~$0$.\\
 	      (观察~$a_n=\left(\dfrac{1\cdot3}{2\cdot2}\right)\left(\dfrac{3\cdot5}{4\cdot4}\right)\cdots\left(\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\right)\left(\dfrac{2n-1}{(2n)^2}\right)$.)
 	      \begin{proof}
-		      \[0\leqslant a_n=\left(\dfrac{1\cdot3}{2\cdot2}\right)\left(\dfrac{3\cdot5}{4\cdot4}\right)\cdots\left(\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\right)\left(\dfrac{2n-1}{(2n)^2}\right).\]
+		      \[
+			      0\leqslant a_n=\left(\dfrac{1\cdot3}{2\cdot2}\right)\left(\dfrac{3\cdot5}{4\cdot4}\right)\cdots\left(\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\right)\left(\dfrac{2n-1}{(2n)^2}\right).
+		      \]
 		      由平均值不等式可知~$(2n-3)(2n-1)\leqslant\left(\dfrac{(2n-3)+(2n-1)}{2}\right)^2=(2n-2)^2$, 即~$\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\leqslant 1$, 于是~$0\leqslant a_n\leqslant\dfrac{2n-1}{4n^2}\to 0\ (n\to\infty)$. 故由夹逼定理知~$\lim\limits_{n\to\infty} a_n=0$.\qedhere
 	      \end{proof}
 	\item 设~$a_n=\left[\dfrac{(2n)!!}{(2n-1)!!}\right]^2\cdot\dfrac{1}{2n+1}, n\in\mathbf{N}_{+}$, 证明: $\{a_n\}$~收敛.\\
 	      (方法与上一题类似. 在学了积分学后将于命题~$11.4.1$~中求出上述数列的极限为~$\dfrac{\pi}{2}$. 这就是~Wallis~公式.)
 	      \begin{proof}
-		      \[
+		      \begin{equation*}
 			      \begin{split}
 				      a_n=&\left[\dfrac{(2n)!!}{(2n-1)!!}\right]^2\cdot\dfrac{1}{2n+1}=\left(\dfrac{2\cdot4\cdot6\cdots2n}{1\cdot3\cdot5\cdots(2n-1)}\right)^2\cdot\dfrac{1}{2n+1}\\
 				      =&\left(\dfrac{2}{1^2}\right)\left(\dfrac{2\cdot4}{3^2}\right)\left(\dfrac{4\cdot6}{5^2}\right)\cdots\left(\dfrac{(2n-2)(2n)}{(2n-1)^2}\right)\cdot\dfrac{2n}{2n+1}\leqslant2.
 			      \end{split}
-		      \]
+		      \end{equation*}
 		      其中用到了基本不等式~$(2n-2)(2n)\leqslant\left(\dfrac{(2n-2)+(2n)}{2}\right)^2=(2n-1)^2$, 即~$\dfrac{(2n-2)(2n)}{(2n-1)^2}\leqslant 1$, 于是~$\{a_n\}$~有上界; 又由
-		      \[\dfrac{a_n}{a_{n-1}}=\left(\dfrac{2n}{2n-1}\right)^2\dfrac{2n-1}{2n+1}=\dfrac{4n^2}{4n^2-1}\geqslant 1.\]
+		      \[
+			      \dfrac{a_n}{a_{n-1}}=\left(\dfrac{2n}{2n-1}\right)^2\dfrac{2n-1}{2n+1}=\dfrac{4n^2}{4n^2-1}\geqslant 1.
+		      \]
 		      故~$\{a_n\}$~单调增加. 由单调有界原理知~$\{a_n\}$~收敛.\qedhere
 
 	      \end{proof}
@@ -376,10 +412,197 @@
 		      \begin{enumerate}[(1)]
 			      \item $\dfrac{a_n}{a_{n-1}}=\dfrac{1+(n-1)^2}{1+n^2}\leqslant 1$, 故~$\{a_n\}$~单调减少;
 			      \item 由于~$\{\sin{n}\}$~有界, 若其单调, 则~$\{\sin{n}\}$~收敛, 而已知其发散, 故不单调;
-			      \item 由于~$n!<(n+1)^n$, 故~$(n!)^{n+1}<(n!)^n(n+1)^n$, 不等式两边开~$n(n+1)$~次根号, 就有~$\sqrt[n]{n!}<\sqrt[n+1]{n!}\cdot\sqrt[n+1]{n+1}=\sqrt[n+1]{(n+1)!}$, 故~$\{\sqrt[n]{n!}\}$~单调增加.\qedhere
+			      \item 由于~$n!<(n+1)^n$, 故~$(n!)^{n+1}<(n!)^n(n+1)^n$, 不等式两边开~$n(n+1)$~次根号, 就有
+			            \[
+				            \sqrt[n]{n!}<\sqrt[n+1]{n!\cdot (n+1)}=\sqrt[n+1]{(n+1)!},
+			            \]
+			            故~$\{\sqrt[n]{n!}\}$~单调增加.\qedhere
 		      \end{enumerate}
 	      \end{proof}
 	\item 证明: 单调数列~$\{a_n\}$~收敛的充分必要条件是它有一个收敛子列.
-	\item 对每个自然数~$n$, 用~$x_n$~表示方程~$x+x^2+\cdots+x^n=1$~在闭区间~$[0,1]$~中的根. 求~$\lim\limits_{n\to\infty} x_n$.
+	      \begin{proof}
+		      必要性. 若~$\{a_n\}$~收敛, 则其任意子列~$\{a_{n_k}\}$~均收敛.
+
+		      充分性. 不妨设~$\{a_n\}$~单调增加, 则其任意子列也单调增加. 设~$\lim\limits_{n\to\infty} x_{n_k}=a$. 则由~3~可知, $\forall k\in\mathbf{N}_{+}, a_{n_k}\leqslant a$. 若~$\{a_n\}$~无上界, 则存在~$n_0\in\mathbf{N}_{+}$~使得~$x_{n_0}>a$, 从而对于充分大的~$k\in\mathbf{N}_{+}$, 有~$a_{n_k}\geqslant a_{n_0}>a$. 这与~$a_{n_k}\leqslant a, \forall k\in\mathbf{N}_{+}$~矛盾. 故~$\{a_n\}$~有上界. 从而由单调有界原理, $\{a_n\}$~收敛.
+	      \end{proof}
+	\item 对每个自然数~$n$, 用~$x_n$~表示方程~$x+x^2+\cdots+x^n=1$~在闭区间~$[0,1]$~中的根.\footnote{事实上, 这里需要使用函数的单调性及连续性证明方程的根在闭区间~$[0,1]$~中存在唯一.} 求~$\lim\limits_{n\to\infty} x_n$.
+	      \begin{proof}
+		      令~$f_n(x)=x+x^2+\cdots+x^n$, 则~$f_n'(x)=1+2x+\cdots+nx^{n-1}>0, \forall x>0$. 注意~$f_n(0)=0, f_n(1)=n\geqslant 1, \forall n\in\mathbf{N}_{+}$, 故由~$f_n(x)$~的单调性及连续函数的介值定理知, $f_n(x)$~的零点在~$[0,1]$~上存在唯一.
+
+		      \[
+			      f_n(x_n)=f_{n+1}(x_{n+1})=f_n(x_{n+1})+x_{n+1}^{n+1}\geqslant f_n(x_{n+1}), \forall n\in\mathbf{N}_{+},
+		      \]
+		      由~$f_n(x)$~的单调性易知~$x_n\geqslant x_{n+1}, n\in\mathbf{N}_{+}$, 故~$\{x_n\}$~单调有界, 从而收敛. 记~$\lim\limits_{n\to\infty} x_n=\xi$, 在~$1=f_n(x_n)=x_n+x_n^2+\cdots+x_n^n=\dfrac{x_n(1-x_n^n)}{1-x_n}$~的两侧取极限, 有~$1=2\xi-\lim\limits_{n\to\infty} x_n^{n+1}$. 注意到~$0\leqslant x_n^{n+1}\leqslant x_2^{n+1}\to 0\ (n\to\infty)$, 故~$\xi=1/2$, 即~$\lim\limits_{n\to\infty} x_n=1/2$.\qedhere
+	      \end{proof}
+\end{enumerate}
+
+\section{Cauchy~命题与~Stolz~定理}
+\subsection{思考题 pp.35.}
+若在这三个命题的条件中将极限值~$l$~改为不带符号的无穷大量~$\infty$, 则结论不成立. 请读者举出反例.
+
+\subsection{练习题 pp.37.}
+\begin{enumerate}
+	\item 设~$\lim\limits_{n\to\infty} x_n=+\infty$, 证明: $\lim\limits_{n\to\infty} \dfrac{x_1+x_2+\cdots+x_n}{n}=+\infty$.
+	      \begin{proof}
+		      对于~$\forall M>0$, 由~$\lim\limits_{n\to\infty} x_n=+\infty$, 知存在~$N_1\in\mathbf{N}_{+}$~使当~$n>N_1$~时有~$x_n>3M$, 于是
+		      \begin{equation*}
+			      \begin{split}
+				      \dfrac{x_1+x_2+\cdots+x_n}{n}=&\dfrac{x_1+x_2+\cdots+x_{N_1}}{n}+\dfrac{x_{N_1+1}+x_{N_1+2}+\cdots+x_n}{n}\\
+				      >&\dfrac{x_1+x_2+\cdots+x_{N_1}}{n}+\dfrac{n-N_1}{n}\cdot 3M
+			      \end{split}
+		      \end{equation*}
+		      由于~$\dfrac{x_1+x_2+\cdots+x_{N_1}}{n}\to 0, \dfrac{n-N_1}{n}\to 1\ (n\to\infty)$ 故存在~$N_2\mathbf{N}_{+}$~使当~$n>N_2$~时, $\dfrac{x_1+x_2+\cdots+x_{N_1}}{n}>-M/2$~且~$\dfrac{n-N_1}{n}>1/2$. 于是当~$n>N=\max\{N_1,N_2\}$~时,
+		      \[
+			      \dfrac{x_1+x_2+\cdots+x_n}{n}>3M/2-M/2=M.
+		      \]
+		      即~$\lim\limits_{n\to\infty} \dfrac{x_1+x_2+\cdots+x_n}{n}=+\infty$.\qedhere
+	      \end{proof}
+	\item 设~$\{x_n\}$~单调增加， $\lim\limits_{n\to\infty} \dfrac{x_1+x_2+\cdots+x_n}{n}=a$, 证明: $\{x_n\}$~收敛于~$a$.
+	      \begin{proof}
+		      断言~$\forall n\in\mathbf{N}_{+}, x_n\leqslant a$. 否则存在~$n_0\mathbf{N}_{+}$~使得~$x_{n_0}>a$, 不妨设~$x_{n_0-1}\leqslant a<x_{n_0}$, 则
+		      \begin{equation*}
+			      \begin{split}
+				      \dfrac{x_1+x_2+\cdots+x_n}{n}-a=&\dfrac{(x_1-a)+(x_2-a)+(x_n-a)}{n}\\
+				      \geqslant& \dfrac{(x_1-a)+(x_2-a)+\cdots+(x_{n_0-1}-a)}{n}+\dfrac{(n-n_0+1)(x_{n_0}-a)}{n}\\
+				      =& x_{n_0}-a+\dfrac{(x_1-a)+(x_2-a)+\cdots+(x_{n_0-1}-a)-(n_0-1)(x_{n_0}-a)}{n}\\
+				      \to& x_{n_0}-a>0\ (n\to\infty)
+			      \end{split}
+		      \end{equation*}
+		      与~$\lim\limits_{n\to\infty} \dfrac{x_1+x_2+\cdots+x_n}{n}=0$~矛盾. 故~$\dfrac{x_1+x_2+\cdots+x_n}{n}\leqslant x_n\leqslant a, \forall n\in\mathbf{N}_{+}$, 由夹逼定理知~$\lim\limits_{n\to\infty} x_n=a$.\qedhere
+	      \end{proof}
+	\item 设~$\{a_{2k-1}\}$~收敛于~$a$, $\{a_{2k-1}\}$~收敛于~$b$, 其~$a\neq b$, 求~$\lim\limits_{n\to\infty} \dfrac{a_1+a_2+\cdots+a_n}{n}$.\\
+	      (注意: 虽然数列~$\{a_n\}$~发散, 但前~$n$~项的算术平均值所组成的数列仍可以有极限.\footnote{这里可以和级数的~Ces\`aro~求和结合起来看.} 一个典型例子就是~$\{(-1)^n\}$.)
+	      \begin{proof}
+		      记~$y_n=\dfrac{a_1+a_2+\cdots+a_n}{n}$, 则由~Cauchy~命题, 有
+		      \begin{equation*}
+			      \begin{split}
+				      y_{2n}&=\dfrac{1}{2}\left(\dfrac{a_1+a_3+\cdots+a_{2n-1}}{n}+\dfrac{a_2+a_4+\cdots+a_2n}{n}\right)\to\dfrac{a+b}{2},\\
+				      y_{2n+1}&=\dfrac{n+1}{2n+1}\left(\dfrac{a_1+a_3+\cdots+a_{2n+1}}{n+1}+\dfrac{n}{n+1}\dfrac{a_2+a_4+\cdots+a_{2n}}{n}\right)\to\dfrac{a+b}{2},\ n\to\infty.
+			      \end{split}
+		      \end{equation*}
+		      即~$\lim\limits_{n\to\infty} y_{2n}=\lim\limits_{n\to\infty} y_{2n+1}=\dfrac{a+b}{2}$, 由~pp.25. 1.~知~$\lim\limits_{n\to\infty} {a_1+a_2+\cdots+a_n}{n}=\dfrac{a+b}{2}$.\qedhere
+	      \end{proof}
+	\item 若~$\lim\limits_{n\to\infty} (a_n-a_{n-1})=d$, 证明: $\lim\limits_{n\to\infty} \dfrac{a_n}{n}=d$.\\
+	      (本题可以说是~Cauchy~命题的另一种形式, 也很有用.)
+	      \begin{proof}
+		      定义\footnote{这里定义的合理性在于任意改变数列的有限项, 数列的敛散性不变, 并且若其收敛, 其极限值不变.}~$a_0=0$, 记~$y_n=a_n-a_{n-1}, n=1,2,\cdots$, 则由~Cauchy~命题可知~$\lim\limits_{n\to\infty} \dfrac{y_1+y_2+\cdots+y_n}{n}=d$, 即~$\lim\limits_{n\to\infty} \dfrac{a_n}{n}=d$.\qedhere
+	      \end{proof}
+	\item 设~$\{a_n\}$~为正数列, 且收敛于~$A$, 证明: $\lim\limits_{n\to\infty} (a_1a_2\cdots a_n)^\frac{1}{n}=A$.\\
+	      (本题与~Cauchy~命题的关系是明显的.)
+	      \begin{proof}
+		      由基本不等式知,
+		      \[
+			      \dfrac{n}{\frac{1}{a_1}+\frac{1}{a_2}+\cdots+\frac{1}{a_n}}\leqslant(a_1a_2\cdots a_n)^{\frac{1}{n}}\leqslant\dfrac{a_1+a_2+\cdots+a_n}{n}, \forall n\in\mathbf{N}_{+}.
+		      \]
+		      若~$A=0$, 则~$0\leqslant(a_1a_2\cdots a_n)^{\frac{1}{n}}\leqslant\dfrac{a_1+a_2+\cdots+a_n}{n}$, 由~Cauchy~命题知, $\lim\limits_{n\to\infty} \dfrac{a_1+a_2+\cdots+a_n}{n}=0$. 故由夹逼定理知~$\lim\limits_{n\to\infty} (a_1a_2\cdots a_n)^\frac{1}{n}=0$.
+
+		      若~$A>0$, 则~$\lim\limits_{n\to\infty} \dfrac{1}{a_n}=\dfrac{1}{A}$, 由~Cauchy~命题知
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{n}{\frac{1}{a_1}+\frac{1}{a_2}+\cdots+\frac{1}{a_n}}=\lim\limits_{n\to\infty} \dfrac{1}{\dfrac{\frac{1}{a_1}+\frac{1}{a_2}+\cdots+\frac{1}{a_n}}{n}}=\dfrac{1}{\frac{1}{A}}=A,
+		      \]
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{a_1+a_2+\cdots+a_n}{n}=A.
+		      \]
+		      故由夹逼定理知, $\lim\limits_{n\to\infty} (a_1a_2\cdots a_n)^\frac{1}{n}=A$.\qedhere
+	      \end{proof}
+	\item 设~$\{a_n\}$~为正数列, 且存在极限~$\lim\limits_{n\to\infty} \dfrac{a_{n+1}}{a_n}=l$, 证明: $\lim\limits_{n\to\infty} \sqrt[n]{a_n}=l$.\\
+	      (本题对类型为~$\{\sqrt[n]{a_n}\}$~的极限问题很有用, 可以说是例题~2.1.2~的一个发展. 这个结果在无穷级数的研究中也很重要.\footnote{参见正项级数的比值判别法(d'Alembert)和根值判别法(Cauchy), 我们有: 前者有效时后者一定有效, 但反之不成立, 如~$\sum_{n=1}^{\infty} 2^{-n-(-1)^n}$.})
+	      \begin{proof}
+		      定义~$a_0=0$, 则~$\sqrt[n]{a_n}=\sqrt[n]{\dfrac{a_n}{a_{n-1}}\dfrac{a_{n-1}}{a_{n-2}}\cdots\dfrac{a_1}{a_0}}, \forall n\in\mathbf{N}_{+}$. $\{a_n\}$~是正数列, 故~$\left\{\dfrac{a_n}{a_{n-a}}\right\}$~也是正数列. 由~5~可知
+		      \[
+			      \lim\limits_{n\to\infty} \sqrt[n]{a_n}=\lim\limits_{n\to\infty} \sqrt[n]{\dfrac{a_n}{a_{n-1}}\dfrac{a_{n-1}}{a_{n-2}}\cdots\dfrac{a_1}{a_0}}=\lim\limits_{n\to\infty} \dfrac{a_n}{a_{n-1}}=l.\qedhere
+		      \]
+	      \end{proof}
+	\item 设~$\lim\limits_{n\to\infty} (x_n-x_{n-2})=0$, 证明: $\lim\limits_{n\to\infty} \dfrac{x_n}{n}=0$.
+	      \begin{proof}
+		      定义~$x_{-1}=x_0=0$, 并记~$a_n=x_n-x_{n-2}, n=1,2,\cdots$. 由~$\lim\limits_{n\to\infty} a_n=0$~知~$\lim\limits_{n\to\infty} a_{2n}=\lim\limits_{n\to\infty} a_{2n-1}=0$. 由~Cauchy~命题知,
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{x_{2n}}{2n}=\lim\limits_{n\to\infty} \dfrac{n}{2n}\dfrac{x_{2n}}{n}=\lim\limits_{n\to\infty} \dfrac{n}{2n}\dfrac{a_2+a_4+\cdots+a_{2n}}{n}=0.
+		      \]
+		      同理有
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{x_{2n-1}}{2n-1}=\lim\limits_{n\to\infty} \dfrac{n}{2n-1}\dfrac{x_{2n-1}}{n}=\lim\limits_{n\to\infty} \dfrac{n}{2n-1}\dfrac{a_1+a_3+\cdots+a_{2n-1}}{n}=0.
+		      \]
+		      故由~pp.25. 1.~知~$\lim\limits_{n\to\infty} \dfrac{x_n}{n}=0$.\qedhere
+	      \end{proof}
+	\item 设~$\lim\limits_{n\to\infty} (x_n-x_{n-2})=0$, 证明: $\lim\limits_{n\to\infty} \dfrac{x_n-x_{n-1}}{n}=0$.
+	      \begin{proof}
+		      定义~$x_{-1}=x_0=0$, 并记~$a_n=x_n-x_{n-2}, n=1,2,\cdots$. 由~Cauchy~命题知, $\lim\limits_{n\to\infty} \dfrac{x_n+x_{n-1}}{n}=\lim\limits_{n\to\infty} \dfrac{a_1+a_2+\cdots+a_n}{n}=\lim\limits_{n\to\infty} a_n=0$. 由~7~知, $\lim\limits_{n\to\infty} \dfrac{x_n}{n}=0$. 故
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{x_n-x_{n-1}}{n}=\lim\limits_{n\to\infty} \dfrac{x_n+x_{n+1}}{n}-\dfrac{2(n-1)}{n}\dfrac{x_{n-1}}{n-1}=0.\qedhere
+		      \]
+	      \end{proof}
+	\item 设数列~$\{a_n\}$~满足条件~$0<a_1<1$~和~$a_{n+1}=a_n(1-a_n)$, 证明: $\lim\limits_{n\to\infty} na_n=1$.
+	      \begin{proof}
+		      由于~$0<a_1<1, a_{n+1}=a_n(1-a_n)$, 故
+		      \[
+			      0<a_2=a_1(1-a_1)\leqslant\left(\dfrac{a_1+(1-a_1)}{2}\right)^2=\dfrac{1}{4}<1,
+		      \]
+		      归纳地可以得到~$\forall n\in\mathbf{N}_{+}, 0<a_n<1$. 由~$\dfrac{a_{n+1}}{a_n}=1-a_n<1$, 知~$\{a_n\}$~单调减少有下界, 故其收敛. 设~$\lim\limits_{n\to\infty} a_n=a$, 在递推式~$a_{n+1}=a_n(1-a_n)$~两侧令~$n\to\infty$, 就有~$a=a(1-a)$, 故~$\lim\limits_{n\to\infty} a_n=0$.
+
+		      又由~$a_{n+1}=a_n(1-a_n)$, 同时取倒数就有
+		      \[
+			      \dfrac{1}{a_{n+1}}=\dfrac{1}{a_n(1-a_n)}=\dfrac{1}{a_n}+\dfrac{1}{1-a_n},
+		      \]
+		      故~$\lim\limits_{n\to\infty} \dfrac{1}{a_{n+1}}-\dfrac{1}{a_n}=\lim\limits_{n\to\infty} \dfrac{1}{1-a_n}=1$. 由~Cauchy~命题可知~$\lim\limits_{n\to\infty} \dfrac{1}{n}\sum\limits_{k=1}^{n-1}\left(\dfrac{1}{a_{k+1}}-\dfrac{1}{a_k}\right)=1$, 即~$\lim\limits_{n\to\infty}\left(\dfrac{1}{na_n}-\dfrac{1}{na_1}\right)=1$. 于是就有~$\lim\limits_{n\to\infty} \dfrac{1}{na_n}=1$, 故~$\lim\limits_{n\to\infty} na_n=1$.\qedhere
+	      \end{proof}
+	\item 若~$\lim\limits_{n\to\infty} a_n=\alpha$, $\lim\limits_{n\to\infty} b_n=\beta$, 证明: $\lim\limits_{n\to\infty} \dfrac{a_1b_n+a_2b_{n-1}+\cdots+a_nb_1}{n}=\alpha\beta$.
+	      \begin{proof}
+		      \footnote{本题的证明方法可以用于一切类似~Teoplitz~定理的极限证明, 事实上~Teoplitz~定理也能类似给出证明.}
+		      当~$\beta=0$~时, 由于~$\lim\limits_{n\to\infty} a_n=\alpha$, 故存在~$M>0$~使得~$|a_n|\leqslant M, n=1,2,\cdots$; 对于~$\forall\varepsilon>0$, 由~$\lim\limits_{n\to\infty} b_n=0$, $\exists N_1\in\mathbf{N}_{+}$~使得当~$n>N_1$~时, $|b_n|\leqslant\varepsilon/2M$, 于是
+		      \[
+			      \left|\dfrac{a_1b_n+a_2b_{n-1}+\cdots+a_nb_1}{n}\right|\leqslant M\cdot\dfrac{|b_1|+|b_2|+\cdots+|b_{N_1}|}{n}+M\cdot\dfrac{n-N_1}{n}\dfrac{\varepsilon}{2M}.
+		      \]
+		      对于常数~$M'=M\cdot(|b_1|+|b_2|+\cdots+|b_{N_1}|)$, 存在~$N_2\in\mathbf{N}_{+}$~使得当~$n>N_2$~时, $\dfrac{M'}{n}<\varepsilon/2$. 故当~$n>\max\{N_1,N_2\}$~时,
+		      \[
+			      \left|\dfrac{a_1b_n+a_2b_{n-1}+\cdots+a_nb_1}{n}\right||\leqslant M\cdot\dfrac{|b_1|+|b_2|+\cdots+|b_{N_1}|}{n}+M\cdot\dfrac{n-N_1}{n}\dfrac{\varepsilon}{2M}<\varepsilon/2+\varepsilon/2=\varepsilon.
+		      \]
+		      即~$\lim\limits_{n\to\infty} \dfrac{a_1b_n+a_2b_{n-1}+\cdots+a_nb_1}{n}=0$.
+
+		      当~$\beta\neq 0$~时, 由~$\lim\limits_{n\to\infty} b_n=\beta$~知~$\lim\limits_{n\to\infty} (b_n-\beta)=0$. 故有
+		      \[
+			      \lim\limits_{n\to\infty} \dfrac{a_1(b_n-\beta)+a_2(b_{n-1}-\beta)+\cdots+a_n(b_1-\beta)}{n}=0.
+		      \]
+		      即
+		      \begin{equation*}
+			      \begin{split}
+				      \lim\limits_{n\to\infty} \dfrac{a_1b_n+a_2b_{n-1}+\cdots+1_nb_1}{n}&= \lim\limits_{n\to\infty} \dfrac{a_1(b_n-\beta)+a_2(b_{n-1}-\beta)+\cdots+a_n(b_1-\beta)}{n}\\
+				      &+\lim\limits_{n\to\infty} \beta\dfrac{a_1+a_2+\cdots+a_n}{n}\\
+				      &=0+\beta\alpha=\alpha\beta.\qedhere
+			      \end{split}
+		      \end{equation*}
+	      \end{proof}
+\end{enumerate}
+
+\section{自然对数的底~$\e$~和~Euler~常数~$\gamma$}
+\subsection{练习题 pp.45.}
+\begin{enumerate}
+	\item 计算下列极限:
+	      \begin{tabenum}[(1)]
+		      \item $\lim\limits_{n\to\infty} \left(1-\dfrac{1}{n}\right)^n$;
+		      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{1}{2n}\right)^n$;\\
+		      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{2}{n}\right)^n$;
+		      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{1}{n}\right)^{n^2}$;\\
+		      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{1}{n^2}\right)^n$;
+		      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{1}{n}+\dfrac{1}{n^2}\right)^n$.
+	      \end{tabenum}
+	      (在计算中可以应用~2.1.5~小节的题~5~中有关连续性的结果. 但是要请读者注意, 在现阶段如下的做法是缺乏依据的 (以题~(3)~为例):
+	      \[
+		      \lim\limits_{n\to\infty} \left(1+\dfrac{2}{n}\right)^n=\lim\limits_{n\to\infty} \left[\left(1+\dfrac{2}{n}\right)^{\frac{n}{2}}\right]^2=\e^2.)
+	      \]
+	      \begin{proof}
+		      \hspace{1em}
+		      \begin{enumerate}[(1)]
+			      \item $\lim\limits_{n\to\infty} \left(\dfrac{n}{n-1}\right)^n=\lim\limits_{n\to\infty} \dfrac{n}{n-1}\left(1+\dfrac{1}{n-1}\right)^{n-1}=\e$, 故~$\lim\limits_{n\to\infty} \left(1-\dfrac{1}{n}\right)^n=\dfrac{1}{\e}$;
+			      \item $\lim\limits_{n\to\infty} \left(1+\dfrac{1}{2n}\right)^n=\lim\limits_{n\to\infty} \sqrt{\left(1+\dfrac{1}{2n}\right)^{2n}}=\sqrt{\e}$;
+			      \item $\begin{aligned}[t]
+					            \lim\limits_{n\to\infty} \left(1+\dfrac{2}{n}\right)^n= & \lim\limits_{n\to\infty} \left(1+\dfrac{1}{n+1}\right)^n\left(1+\dfrac{1}{n}\right)^n                           \\
+					            =                                                       & \lim\limits_{n\to\infty} \dfrac{n+1}{n+2}\left(1+\dfrac{1}{n+1}\right)^{n+1}\left(1+\dfrac{1}{n}\right)^n=\e^2;
+				            \end{aligned}$
+			      \item $.$
+
+		      \end{enumerate}
+	      \end{proof}
+
 \end{enumerate}
 \end{document}
