--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -738,5 +738,52 @@
 		      对于~$n\geqslant 2$~恒成立.\qedhere
 	      \end{proof}
 	\item 设有~$a_1=1,a_n=n(a_{n-1}+1), n=2,3,\cdots$, 又设~$x_n=\prod\limits_{k=1}^n\left(1+\dfrac{1}{a_k}\right), n\in\mathbf{N}_{+}$, 求数列~$\{x_n\}$~的极限.
+	      \begin{proof}
+		      对于~$n\in\mathbf{N}_{+}$, 有
+		      \[
+			      \begin{split}
+				      x_n=& \prod_{k=1}^n \left(1+\dfrac{1}{a_k}\right)=\dfrac{a_1+1}{a_1}\cdot\dfrac{a_2+1}{a_2}\cdot\cdots\cdot\dfrac{a_n+1}{a_n}\\
+				      =&\dfrac{a_2}{2a_1}\cdot\dfrac{a_3}{3a_2}\cdot\cdots\cdot\dfrac{a_{n+1}}{(n+1)a_n}\\
+				      =&\dfrac{a_{n+1}}{(n+1)!}\\
+				      =&\dfrac{(n+1)(a_n+1)}{(n+1)!}\\
+				      =&\dfrac{1}{n!}+\dfrac{a_n}{n!}\\
+				      \cdots&\\
+				      =&\dfrac{1}{n!}+\cdots+\dfrac{1}{2!}+\dfrac{a_2}{2!}\\
+				      =&\dfrac{1}{n!}+\cdots+\dfrac{1}{2!}+\dfrac{2(a_1+1)}{2!}\\
+				      =&\dfrac{1}{n!}+\cdots+\dfrac{1}{2!}+1+1.
+			      \end{split}
+		      \]
+		      即~$x_n=\sum\limits_{k=0}^{n}\dfrac{1}{k!}, n\in\mathbf{N}_{+}$. 故~$\lim\limits_{n\to\infty} x_n=\e$.\qedhere
+	      \end{proof}
 \end{enumerate}
+
+\section{由迭代生成的数列}
+\subsection{练习题 pp.52}
+在以下各题中均可使用几何方法, 或做出几何解释.
+\begin{enumerate}
+	\item
+	      \begin{enumerate}[(1)]
+		      \item 设~$a>0, x_1=\sqrt{a}, x_{n+1}=\sqrt{a+x_n}, n\in\mathbf{N}_{+}$, 求~$\lim\limits_{n\to\infty} x_n$;
+		      \item 设~$a>0, x_1=\sqrt{a}, x_{n+1}=\sqrt{ax_n}, n\in\mathbf{N}_{+}$, 求~$\lim\limits_{n\to\infty} x_n$.
+	      \end{enumerate}
+	      (这两题外形相似, 都可用本节方法解决. 但题~(2)~有更简单的直接解法.)
+
+	\item 设~$A>0, 0<b_0<A^{-1}, b_{n+1}=b_n(2-Ab_n),n\in\mathbf{N}_{+}$. 证明~$\lim\limits_{n\to\infty} b_n=A^{-1}$.
+\end{enumerate}
+
+\section{对于教学的建议}
+\subsection{第一组参考题}
+\begin{enumerate}
+	\item 设~$\{a_{2k-1}\}, \{a_{2k}\}, \{a_{3k}\}$~都收敛, 证明: $\{a_n\}$~收敛.
+	      \begin{proof}
+		      取子数列~$\{a_{3k}\}$~奇数项和偶数项所排成的子列~$\{a_{6k-3}\}$~和~$\{a_{6k}\}$, 它们均为同一收敛数列的子列, 故均收敛且极限相等. 注意到, $\{a_{6k-3}\}$~也是收敛数列~$\{a_{2k-1}\}$~的一个子列, $\{a_{6k}\}$~也是收敛数列~$\{a_{2k}\}$~的一个子列, 从而
+		      \[
+			      \lim\limits_{k\to\infty} a_{2k-1}=\lim\limits_{k\to\infty} a_{6k-3}=\lim\limits_{k\to\infty} a_{6k}=\lim\limits_{k\to\infty} a_{2k}.
+		      \]
+		      即~$\{a_{2k-1}\}, \{a_{2k}\}$~收敛到相同的极限, 故由~pp.25 1~知~$\{a_n\}$~收敛. \qedhere
+	      \end{proof}
+
+	\item 设~$\{a_n\}$~有界, 且满足条件~$a_n\leqslant a_{n+2}, a_n\leqslant a_{n+3}, n\in\mathbf{N}_{+}$, 证明: $\{a_n\}$~收敛.
+\end{enumerate}
+\subsection{第二组参考题}
 \end{document}
